fix: navigation button invisible when logo large (#381)
* fix: navigation button invisible when logo large

* fix: 131px never need and going to the trash

--- a/src/components/navigation/CustomNavigation/CustomNavigation.scss
+++ b/src/components/navigation/CustomNavigation/CustomNavigation.scss
@@ -29,4 +29,10 @@
             }
         }
     }
+
+    @media (max-width: map.get(variables.$screenBreakpoints, 'sm') - 1) {
+        .pc-desktop-navigation__wrapper .pc-desktop-navigation__logo .pc-logo__icon {
+            max-width: 100%;
+        }
+    }
 }
